--- a/main.css
+++ b/main.css
@@ -46,11 +46,20 @@ img {
 img:hover {
 	box-shadow: 0px 0px 10px gray;
 }
+th {
+	text-align: center;
+}
 .header {
 	background-color: lightgray;
 }
+.panel {
+	
+}
+.panel-heading {
+	background-color: #D3D3D3 !important;
+}
 .panel-body {
-	background-color: lightblue
+	background-color: #DDE;
 }
 .links {
 	background-color: #dde;
