--- a/main.css
+++ b/main.css
@@ -5,6 +5,7 @@ body {
 h1 {
 	text-align: center;
 	font-weight: bold;
+	margin: 0px;
 }
 h1 a {
 	color: black;
@@ -14,6 +15,7 @@ h1 a:hover {
 }
 h3 {
 	font-weight: bold;
+	margin: 0px;
 }
 button {
 	background-color: #9af;
