--- a/main.css
+++ b/main.css
@@ -1,6 +1,9 @@
 body {
 	font-family: Georgia;
 	text-align: center;
+	/*background: url("http://my-smashing.smashingapps.netdna-cdn.com/wp-content/uploads/2013/04/blurbackgrounds9.jpg") no-repeat center;*/
+	/*background-size: cover;*/
+	background-color: #f8f8ff;
 }
 h1 {
 	text-align: center;
@@ -39,6 +42,12 @@ a {
 a:hover {
 	text-decoration: underline;
 }
+a:active {
+	text-decoration: underline;
+}
+a:focus {
+	text-decoration: none;
+}
 img {
   max-width: 100%;
   box-shadow: 0px 0px 10px lightgray;
@@ -50,12 +59,33 @@ img:hover {
 }
 th {
 	text-align: center;
+	cursor: default;
 }
+tbody tr {
+	cursor: pointer;
+}
+tbody tr:hover {
+	background-color: #f5f5f5;
+}
+.container {
+	max-width: 600px;
+	margin-top: 10px;
+	padding: 20px 0px 20px 0px;
+	box-shadow: 0px 0px 20px gray;
+	border-radius: 5px;
+	background-color: #f5f5f5;
+}
+.active {
+	background-color: #eee !important;
+}
+/*tbody tr:active {
+	background-color: #e7e7e7;
+}*/
 .header {
 	background-color: lightgray;
 }
 .panel {
-	
+	margin-right: 15px;
 }
 .panel-heading {
 	background-color: #D3D3D3 !important;
@@ -66,4 +96,8 @@ th {
 .links {
 	background-color: #dde;
 	border-radius: 0px 0px 15px 15px;
+}
+.btn-group-vertical {
+	width: 100%;
+	margin-left: 15px;
 }
